--- a/Index.html
+++ b/Index.html
@@ -3,25 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Introduction to CSS</title>
-    <link rel="stylesheet" href="Style/Style.css">
+    <style>
+        h1 {
+            color: navy;
+            text-align: center;
+        }
+    </style>
+    <link rel="stylesheet" href="Styles/Styles.css">
 </head>
-<body>
-     <h1>CSS Basics</h1>
-     <p>This is My first CSS styled web-page</p>
-     <a href="About.html">About CSS</a>
-     <h1 id="Header-2">CSS Selector</h1>
-     <p class="p-css">Element Selector</p>
-     <p class="p-css">Id Selector</p>
-     <p class="p-css">Class Selector</p>
-     <h2>CSS Box Model</h2>
-     <div class="box-model">
-            <div class="box">
-                <p>Content</p>
-            </div>
-
-            </div>
-     </div>
-        
-
+<body style="background-color: lightblue;">
+    <h1>Welcome to CSS basics</h1>
+    <p>This is a simple introduction to CSS.</p>
+     <p>CSS stands for Cascading Style Sheets and is used to style HTML documents.</p>
+            <p>With CSS, you can change colors, fonts, layouts, and much more!</p>
+            <a href="Contact.html">Contact Us</a>
 </body>
 </html>
+
+
+
+
+
+
+
+
