--- a/Index.html
+++ b/Index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Introduction to CSS</title>
-    <style>
-        h1 {
-            color: navy;
-            text-align: center;
-        }
-    </style>
-    <link rel="stylesheet" href="Styles/Styles.css">
-</head>
-<body style="background-color: lightblue;">
-    <h1>Welcome to CSS basics</h1>
-    <p>This is a simple introduction to CSS.</p>
-     <p>CSS stands for Cascading Style Sheets and is used to style HTML documents.</p>
-            <p>With CSS, you can change colors, fonts, layouts, and much more!</p>
-            <a href="Contact.html">Contact Us</a>
-</body>
+    <head>
+        <title>CSS</title>
+        <style>
+            h2 {
+                color: darkblue;
+                text-decoration: underline;
+            }
+        </style>
+        <link rel="stylesheet" href="styles/styles.css">
+    </head>
+    <body>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
+            </nav>
+            <h1 style="color:chocolate;">Cascading Style Sheets</h1>
+        </header>
+        <main id="main-content">
+            <section>
+                <h2>What is it?</h2>
+                <p>CSS is a styling language used to control how html elements look and where to place them.</p>
+            </section>
+        </main>
+    </body>
 </html>
-
-
-
-
-
-
-
-
